--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@
                         Всю необходимую Вам информацию Вы сможете получить на стойке регистрации Центра Закупок Сетей на
                         протяжении всего мероприятия.
                     </div>
+                    <div class="contact__inner__text-bold">
+                        Желаем Вам успешного мероприятия!
+                    </div>
                 </div>
             </div>
 
