--- a/index.html
+++ b/index.html
@@ -48,11 +48,7 @@
                     <h1>ПАМЯТКА УЧАСТНИКА</h1>
                 </div>
                 <div class="main__preview">
-                    Уважаемый делегат! Мы желаем Вам продуктивной работы на Центре Закупок Сетейна выставке “Peterfood”
-                    и хотим
-                    довести до Вашего сведения важные организационные моменты, которые помогут Вам чувствовать себя
-                    комфортно на
-                    мероприятии.
+                    Уважаемый делегат! Желаем вам успешной работы на Центре Закупок Сетей на выставке “Peterfood” и хотим напомнить о ключевых организационных моментах, чтобы ваше участие было максимально комфортным.
                 </div>
             </div>
 
@@ -125,6 +121,9 @@
                 </div>
 
                 <div class="timing__inner">
+                    <div class="timing__inner-time">
+                        12 ноября
+                    </div>
                     <div class="timing__inner-time">
                         10:00
                     </div>
